events/github-events/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-eventsource-ingress
  namespace: argo-events
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /push
          pathType: Prefix
          backend:
            service:
              name: github-eventsource-svc
              port:
                number: 12000
